--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
      <div id="wrapper">
-           <h1>💕CHÚNG TA ĐÃ Ở BÊN NHAU💕</h1>
+           <h1>💕 CHÚNG TA ĐÃ Ở BÊN NHAU 💕</h1>
 
            <div id="clock-box">
                  <div id="clock">
@@ -22,7 +22,7 @@
             <div id="info">
                   <div class="one">
                         <img src="img/main.jpg" class="avt">
-			<p>02-05-1993</p>
+			<p>💖 02-05-1993 💖</p>
                         <p>Nguyễn Tấn Khang Hy</p>
                   </div>
                   <div id="heart">
@@ -30,7 +30,7 @@
                   </div>
                   <div class="two">
                         <img src="img/main2.jpg" class="avt">
-			<p>05-03-2000</p>
+			<p>💖 05-03-2000 💖</p>
                         <p>Nguyễn Thị Mỵ Nương</p>
                   </div>
             </div>
@@ -38,7 +38,7 @@
             <div id="music">
                   <audio loop autoplay controls>Your browser does not support the audio element.</audio>
             </div>
-            <footer>Thank you for your love 💕</footer>
+            <footer>💕 Thank you for your love 💕</footer>
       </div> 
       
       <script src="app.js"></script>
