--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="music">
                   <audio loop autoplay controls>Your browser does not support the audio element.</audio>
             </div>
-            <footer>💕 Thank you for your love 💕</footer>
+            <footer>💕 Cảm ơn em vì đã ở bên anh 💕</footer>
       </div> 
       
       <script src="app.js"></script>
